@@ -1,0 +1,4 @@
+
+scripts_DATA = *.png
+scriptsdir = $(kde_datadir)/kword/horizontalline
+
