@@ -82,6 +82,8 @@ KInstance* KWFactory::global()
       s_global->dirs()->addResourceType( "kword_template",
 				         KStandardDirs::kde_default("data") + "kword/templates/");
       s_global->dirs()->addResourceType( "expression", KStandardDirs::kde_default("data") + "kword/expression/");
+      s_global->dirs()->addResourceType( "horizontalLine", KStandardDirs::kde_default("data") + "kword/horizontalline/");
+
       s_global->dirs()->addResourceType( "toolbar",
 				         KStandardDirs::kde_default("data") + "koffice/toolbar/");
       s_global->dirs()->addResourceType( "toolbar",
